--- a/index.html
+++ b/index.html
@@ -1,143 +1,116 @@
-
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE html><html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Una pregunta importante ❤️</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>¿Quieres ser mi novia?</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
-      font-family: 'Comic Sans MS', cursive;
-      color: #333;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(to right, #ffb6c1, #ffe4e1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       overflow: hidden;
-    }
-
-    .container {
       text-align: center;
-      padding: 100px 20px;
-    }
+    }h1 {
+  font-size: 2.5rem;
+  color: #d6336c;
+  margin-bottom: 2rem;
+}
 
-    h1 {
-      font-size: 3em;
-      animation: bounce 1s infinite;
-    }
+.heart {
+  width: 100px;
+  height: 90px;
+  position: relative;
+  margin: 20px auto;
+  animation: beat 1s infinite;
+}
 
-    p {
-      font-size: 1.5em;
-      margin-top: 20px;
-    }
+.heart::before,
+.heart::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100px;
+  height: 90px;
+  background: red;
+  border-radius: 50px 50px 0 0;
+}
 
-    .heart {
-      width: 100px;
-      height: 90px;
-      background-color: red;
-      position: relative;
-      display: inline-block;
-      margin: 30px auto;
-      transform: rotate(-45deg);
-      animation: beat 1s infinite;
-    }
+.heart::before {
+  left: 50px;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+}
 
-    .heart::before,
-    .heart::after {
-      content: "";
-      width: 100px;
-      height: 90px;
-      background-color: red;
-      border-radius: 50%;
-      position: absolute;
-    }
+.heart::after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+}
 
-    .heart::before {
-      top: -50px;
-      left: 0;
-    }
+@keyframes beat {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+}
 
-    .heart::after {
-      left: 50px;
-      top: 0;
-    }
+.buttons {
+  margin-top: 2rem;
+}
 
-    .button {
-      margin-top: 40px;
-      padding: 15px 30px;
-      font-size: 1.2em;
-      background: white;
-      color: hotpink;
-      border: 2px solid hotpink;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
+button {
+  font-size: 1.2rem;
+  padding: 10px 20px;
+  margin: 10px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s, transform 0.3s;
+}
 
-    .button:hover {
-      background: hotpink;
-      color: white;
-      transform: scale(1.1);
-    }
+.yes {
+  background-color: #4caf50;
+  color: white;
+}
 
-    .nurse {
-      font-size: 1.2em;
-      margin-top: 30px;
-    }
+.yes:hover {
+  background-color: #45a049;
+}
 
-    .nurse::before {
-      content: "👩‍⚕️ ";
-    }
+.no {
+  background-color: #f44336;
+  color: white;
+  position: relative;
+}
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
+.no:hover {
+  background-color: #e53935;
+}
 
-    @keyframes beat {
-      0%, 100% { transform: scale(1) rotate(-45deg); }
-      50% { transform: scale(1.2) rotate(-45deg); }
-    }
-
-    .confetti {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: yellow;
-      animation: fall 3s infinite linear;
-      opacity: 0.8;
-    }
-
-    @keyframes fall {
-      0% { transform: translateY(-100px) rotate(0deg); }
-      100% { transform: translateY(800px) rotate(360deg); }
-    }
   </style>
 </head>
 <body>
-
-  <div class="container">
-    <h1>¡Hola enfermerita hermosa! 💉💗</h1>
-    <div class="heart"></div>
-    <p class="nurse">Sé que salvas vidas y corazones…</p>
-    <p>Y hoy quiero preguntarte algo muy especial:</p>
-    <h2>¿Quieres ser mi novia? 😳❤️</h2>
-    <button class="button" onclick="aceptar()">¡Sí, quiero! 💘</button>
-  </div>
-
-  <script>
-    for(let i = 0; i < 30; i++) {
-      let confetti = document.createElement("div");
-      confetti.classList.add("confetti");
-      confetti.style.left = Math.random() * window.innerWidth + "px";
-      confetti.style.background = `hsl(${Math.random() * 360}, 100%, 70%)`;
-      confetti.style.animationDuration = (Math.random() * 3 + 2) + "s";
-      document.body.appendChild(confetti);
+  <h1>María Paula, princesita hermosa,<br>¿quieres ser mi novia?</h1>
+  <div class="heart"></div>
+  <div class="buttons">
+    <button class="yes" onclick="respuestaSi()">Sí</button>
+    <button class="no" id="noBtn" onclick="respuestaNo()">No</button>
+  </div>  <script>
+    function respuestaSi() {
+      alert("Te quiero mucho, me haces muy feliz ❤️");
     }
 
-    function aceptar() {
-      alert("¡Sabía que dirías que sí! 😍 Te quiero mucho 💖");
+    function respuestaNo() {
+      alert("Vuelve a intentarlo 😅");
+      const btn = document.getElementById("noBtn");
+      const x = Math.floor(Math.random() * (window.innerWidth - 100));
+      const y = Math.floor(Math.random() * (window.innerHeight - 100));
+      btn.style.position = "absolute";
+      btn.style.left = x + "px";
+      btn.style.top = y + "px";
     }
-  </script>
-
-</body>
+  </script></body>
 </html>
